--- a/Automatic_Weblogo.ipynb
+++ b/Automatic_Weblogo.ipynb
@@ -25,7 +25,7 @@
         "[Mirdita M, Schütze K, Moriwaki Y, Heo L, Ovchinnikov S, Steinegger M. ColabFold: Making protein folding accessible to all.\n",
         "*Nature Methods*, 2022](https://www.nature.com/articles/s41592-022-01488-1)\n",
         "\n",
-        "To cite this simple notebook that combines these elements please use Graham C, Stansfeld P and Rodrigues C, Conservation-Colab :Conservation to 3D Structure, Github (2023) doi: https://zenodo.org/doi/10.5281/zenodo.10062701 \n"
+        "To cite this simple notebook that combines these elements please use: [Graham C, Stansfeld P and Rodrigues C, Conservation-Colab :Conservation to 3D Structure, Github (2023)](https://zenodo.org/doi/10.5281/zenodo.10062701) \n"
       ],
       "metadata": {
         "id": "0npxgmjkLX7I"
